Fix TR ore compat.